# pelositracker

./: .env.example  .gitignore  CHANGELOG.md  README.md  build-rust.cmd  env.example  pyproject.toml  requirements.txt  start.cmd
.github/workflows/: ci.yml  docker.yml
app/: __init__.py  accounts.py  actionnetwork.py  advice.py  backtest.py  calibration.py  engine.py  gameclock.py  history.py  http_clients.py  identity.py  ledger.py  main.py  model_registry.py  model_training.py  models.py  notify.py  pinnacle.py  portfolio.py  security.py  settings.py  shadow_eval.py  sources.py  store.py  telemetry.py  tennis_model.py
app/static/: index.css  index.html  index.js  watch.html
docs/: architecture.md  backtesting-methodology.md  data-lineage.md  independent-model-registry.md  milestones.md  model-support.md  operations.md
docs/adr/: 0005-model-selection.md
live-edge-monitor-rust/: Cargo.toml  README.md  __init__.py  _native_engine.cp312-win_amd64.pyd  main.py  models.py  pyproject.toml  sources.py
live-edge-monitor-rust/static/: index.html
live-edge-monitor-rust/tests/: test_api.py
migrations/: README.md
native_engine/: Cargo.toml
native_engine/src/: lib.rs
pelositracker-merged-v0.3.0/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  start.cmd
pelositracker-merged-v0.3.0/app/: __init__.py
pelositracker-merged-v0.3.0/native_engine/: Cargo.toml
pelositracker-merged-v0.3.0/native_engine/src/: lib.rs
pelositracker-merged-v0.3.0/tests/: test_api.py
tests/: test_accounts.py  test_advice.py  test_api.py  test_backtest.py  test_discover.py  test_domain_contracts.py  test_engine.py  test_identity.py  test_migrations.py  test_model_registry.py  test_model_wiring.py  test_perf_optimizations.py  test_portfolio.py  test_security.py  test_shadow_eval.py  test_sources.py  test_telemetry.py  test_tennis_model.py  test_workflows.py
tools/: ram_profile.py
