[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "live-edge-monitor"
version = "0.4.0"
requires-python = ">=3.10,<3.16"

[tool.maturin]
manifest-path = "native_engine/Cargo.toml"
python-source = "."
module-name = "app._native_engine"
features = ["extension-module"]
# Ship the dashboard + watch page with the wheel so they serve on a fresh host.
include = ["app/static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
