[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "live-edge-monitor"
version = "0.6.0"
requires-python = ">=3.10,<3.16"
dependencies = [
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "uvicorn[standard]==0.51.0",
  "websockets==16.1",
  "python-multipart==0.0.31",
  "python-dotenv==1.2.2",
  "argon2-cffi==25.1.0",
  "psycopg2-binary==2.9.12",
]

[tool.maturin]
manifest-path = "native_engine/Cargo.toml"
python-source = "."
module-name = "app._native_engine"
features = ["extension-module"]
# Ship the static assets (pages + favicon) with the wheel for a fresh host.
include = ["app/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
