[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "live-edge-monitor"
version = "0.2.0"
requires-python = ">=3.10"

[tool.maturin]
manifest-path = "native_engine/Cargo.toml"
python-source = "."
module-name = "app._native_engine"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
