[package]
name = "live-edge-engine"
version = "0.4.0"
edition = "2021"
description = "Native signal-scoring engine for Live Edge Monitor"

[lib]
name = "_native_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
