[package]
name = "live-edge-engine"
version = "0.6.0"
edition = "2021"
description = "Native signal-scoring engine for Live Edge Monitor"

[lib]
name = "_native_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# maturin enables this for the Python wheel (see pyproject [tool.maturin]).
# Leaving it OFF by default lets `cargo test` link libpython and run the unit
# tests (extension-module tells the linker NOT to link libpython).
[features]
extension-module = ["pyo3/extension-module"]
